添加地图分类功能，更改地图格式，修改彩蛋效果

--- a/改进.md
+++ b/改进.md
@@ -1,6 +1,6 @@
 # 2023.09.03
 
-#### 1. 地图分类功能
+#### 1. 地图分类功能 ✔
 
     选择地图池可以选择按什么字段分类（主题，难度，类型），默认按主题分类
 
@@ -16,7 +16,7 @@
 
     导入地图时若本地有列表则读取并录入本地列表（txt）
 
-#### 5. 添加live2D形象
+#### 5. 添加live2D形象 ✔
 
     添加大老虎live2D形象，并置入简单触发方式
 
